src/main/java/com/example/error/EmailInUseException.java
package com.example.error;

/**
 * emailが既に他ユーザーに使用されている場合のドメイン例外。
 */
public class EmailInUseException extends RuntimeException {
}
